--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="2.JPG" style="width:100%">
+  <img src="2.jpg" style="width:100%">
   <div class="text"></div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="3.JPg" style="width:100%">
+  <img src="3.jpg" style="width:100%">
   <div class="text"></div>
 </div>
 
