--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ img {vertical-align: middle;}
 }
 </style>
 </head>
-<body style="font-family:Nexa; width:auto;">
+<body style="font-family:Nexa; width:auto;text-align:justify;">
 
 <div class="slideshow-container">
 
