--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ img {vertical-align: middle;}
 }
 </style>
 </head>
-<body style="font-family:Nexa; width:auto;text-align:justify;">
+<body style="font-family:Nexa; width:auto;">
 
 <div class="slideshow-container">
 
@@ -130,13 +130,13 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="2.jpg" style="width:100%">
+  <img src="2.JPG" style="width:100%">
   <div class="text"></div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="3.jpg" style="width:100%">
+  <img src="3.JPg" style="width:100%">
   <div class="text"></div>
 </div>
 
@@ -156,7 +156,7 @@ img {vertical-align: middle;}
 <H1 STYLE= "background-color:hsla(0, 100%, 90%, 0.3);
   padding-top:20px;
   padding-right: 30px;
-  padding-bottom: 100px;
+  padding-bottom:auto;
   padding-left: 80px;
   TEXT-ALIGN:CENTER;
   border-style:groove;"> Testimonials
@@ -173,23 +173,22 @@ img {vertical-align: middle;}
 div.container {
   text-align: center;
   padding: 10px 20px;
-} </style><marquee>
+} </style><marquee direction="">
 <div class="polaroid">
   <img src="1.jpeg"alt="Payal" style="width:100%;">
-  <img src="2.jpeg"alt="Payal" style="width:100%;">
-  <img src="3.jpeg"alt="Payal" style="width:100%;">
-  <img src="4.jpeg"alt="Payal" style="width:100%;">
-  <img src="5.jpeg"alt="Payal" style="width:100%;">
-  <img src="6.jpeg"alt="Payal" style="width:100%;">
-  <img src="7.jpeg"alt="Payal" style="width:100%;">
-  <img src="8.jpeg"alt="Payal" style="width:100%;">
+   <img src="9.jpeg"alt="Payal" style="width:100%;">
+  <img src="10.jpeg"alt="Payal" style="width:100%;">
+  <img src="11.jpeg"alt="Payal" style="width:100%;">
+  <img src="12.jpeg"alt="Payal" style="width:100%;">
+  <img src="13.jpeg"alt="Payal" style="width:100%;">
+
   
  
 </div></marquee></h1>
 <H4 STYLE= "background-color: hsla(0, 100%, 90%, 0.3);
   padding-top:20px;
   padding-right: 20px;
-  padding-bottom: 100px;
+  padding-bottom: Auto;
   padding-left: 80px;
   TEXT-ALIGN:CENTER;
   border-style:groove;"> About LC
@@ -202,8 +201,7 @@ div.container {
   <source src="https://www.youtube.com/watch?v=wdFCwOL-WZQ" type="video/mp4">
   <source src="https://www.youtube.com/watch?v=wdFCwOL-WZQ" type="video/ogg">
  
-</video>
-<!--
+</video><!--
 <iframe width="420" height="345" src="https://www.youtube.com/watch?v=wdFCwOL-WZQ">
 </iframe>-->
 
@@ -212,7 +210,7 @@ div.container {
  <H4 STYLE= "background-color: hsla(0, 100%, 90%, 0.3);
    padding-top:20px;
   padding-right: 20px;
-  padding-bottom: 100px;
+  padding-bottom: Auto;
   padding-left: 80px;
  text-align:center;
    border-style:groove;">
@@ -234,16 +232,49 @@ div.container {
  <H4 STYLE= "background-color: hsla(0, 100%, 90%, 0.3);
   padding-top:20px;
   padding-right: 20px;
-  padding-bottom: 100px;
+  padding-bottom: auto;
   padding-left: 80px;
   TEXT-ALIGN:CENTER;
   border-style:groove;"> Link to search tool
   <hr>
    <ul type="roman">
-  <ol> <a href="https://drive.google.com/file/d/1ohTy9K5EvUOBdFq0r2BGoH-W-3SznUG_/view?usp=sharing"><img src="citybook.png" alt="City Booklet" style="width:150px;height:50px;"></a></ol><br>
-  <ol> <a href="youtube"><img src="tour.png" alt="City Booklet" style="width:150px;height:50px;"></a></ol>
-  </ul></h4>
+  <ol><i>Citybook</i> <a href="https://drive.google.com/file/d/1ohTy9K5EvUOBdFq0r2BGoH-W-3SznUG_/view?usp=sharing"><img src="citybook.png" alt="City Booklet" style="width:150px;height:50px;"></a></ol><br>
+  <ol><i>City Tour</i> <a href="https://drive.google.com/file/d/1ohTy9K5EvUOBdFq0r2BGoH-W-3SznUG_/view?usp=sharing"><img src="citybook.png" alt="City Booklet" style="width:150px;height:50px;"></a></ol><br>
+  </ul></h4><H1 STYLE= "background-color:hsla(0, 100%, 90%, 0.3);
+  padding-top:20px;
+  padding-right: 30px;
+  padding-bottom:auto;
+  padding-left: 80px;
+  TEXT-ALIGN:CENTER;
+  border-style:groove;"> COVID Situation and Other Testimonials
+<br>
+<hr><p>
+</p>
+<hr>
+ <style>div.polaroid {
+  width: 15%;
+  height:Auto%;
+  background-color:;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 25px;
+}
+
+div.container {
+  text-align: center;
+  padding: 10px 20px;
+} </style><marquee>
+<div class="polaroid">
+   <img src="2.jpeg"alt="Payal" style="width:100%;">
+  <img src="3.jpeg"alt="Payal" style="width:100%;">
+  <img src="4.jpeg"alt="Payal" style="width:100%;">
+  <img src="5.jpeg"alt="Payal" style="width:100%;">
+  <img src="6.jpeg"alt="Payal" style="width:100%;">
+  <img src="7.jpeg"alt="Payal" style="width:100%;">
+  <img src="8.jpeg"alt="Payal" style="width:100%;">
  
+  
+ 
+</div></marquee></h1>
 
 
 
