--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
 BODY {
   border: 1px DOTTED black;
@@ -244,11 +245,13 @@ div.container {
   padding-top:20px;
   padding-right: 30px;
   padding-bottom:auto;
-  padding-left: 80px;
-  TEXT-ALIGN:CENTER;
+  padding-left: 30px;
+  TEXT-ALIGN:left;
   border-style:groove;"> COVID Situation and Other Testimonials
 <br>
-<hr><p>
+<hr><p style="font-size:16px;">KOLKATA: West Bengal's Covid-19 tally rose to 5,71,371 on Sunday as 193 more people tested positive for the infection, while five fresh 
+fatalities pushed the state's coronavirus death toll to 10,207, a health bulletin said. Kolkata reported the highest number of new cases at 48,
+ followed by North 24 Parganas (46), it said.
 </p>
 <hr>
  <style>div.polaroid {
