--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@ div.container {
   TEXT-ALIGN:CENTER;
   border-style:groove;"> About LC
   <hr>
-  <p style="font-family:ralliankara;TEXT-ALIGN:justify;">Kolkata, also known as <mark>Calcutta</mark>
+  <p style="font-size:16px; text-align:left;">Kolkata, also known as <mark>Calcutta</mark>
   is the <b>"Cultural Capital"</b> of Indian state of WestBengal. According to the 2011 Indian census
  ,it is the seventh most populous city; the city had a population of 45 millions, while the suburb population brought the total to 141 million 
  , making it is the third most populous meteropolitian area in the India.<p>
-<video width="320" height="240" controls autoplay>
+<video style="width:320; height:240;align:center;" controls autoplay>
   <source src="https://www.youtube.com/watch?v=wdFCwOL-WZQ" type="video/mp4">
   <source src="https://www.youtube.com/watch?v=wdFCwOL-WZQ" type="video/ogg">
  
@@ -212,7 +212,7 @@ div.container {
    padding-top:20px;
   padding-right: 20px;
   padding-bottom: Auto;
-  padding-left: 80px;
+  padding-left: 30px;
  text-align:center;
    border-style:groove;">
    Projects Offered
@@ -234,22 +234,24 @@ div.container {
   padding-top:20px;
   padding-right: 20px;
   padding-bottom: auto;
-  padding-left: 80px;
+  padding-left: 50px;
   TEXT-ALIGN:CENTER;
   border-style:groove;"> Link to search tool
   <hr>
    <ul type="roman">
-  <ol><i>Citybook</i> <a href="https://drive.google.com/file/d/1ohTy9K5EvUOBdFq0r2BGoH-W-3SznUG_/view?usp=sharing"><img src="citybook.png" alt="City Booklet" style="width:150px;height:50px;"></a></ol><br>
-  <ol><i>City Tour</i> <a href="https://drive.google.com/file/d/1ohTy9K5EvUOBdFq0r2BGoH-W-3SznUG_/view?usp=sharing"><img src="citybook.png" alt="City Booklet" style="width:150px;height:50px;"></a></ol><br>
+  <ol><i>Citybook</i> <a href="https://drive.google.com/file/d/1ohTy9K5EvUOBdFq0r2BGoH-W-3SznUG_/view?usp=sharing">
+  <img src="citybook.png" alt="City Booklet" style="width:150px;height:50px;"></a></ol><br>
+  <ol><i>City Tour</i> <a href="https://drive.google.com/file/d/1ohTy9K5EvUOBdFq0r2BGoH-W-3SznUG_/view?usp=sharing">
+  <img src="citybook.png" alt="City Booklet" style="width:150px;height:50px;"></a></ol><br>
   </ul></h4><H1 STYLE= "background-color:hsla(0, 100%, 90%, 0.3);
   padding-top:20px;
   padding-right: 30px;
   padding-bottom:auto;
   padding-left: 30px;
-  TEXT-ALIGN:left;
+  TEXT-ALIGN:center;
   border-style:groove;"> COVID Situation and Other Testimonials
 <br>
-<hr><p style="font-size:16px;">KOLKATA: West Bengal's Covid-19 tally rose to 5,71,371 on Sunday as 193 more people tested positive for the infection, while five fresh 
+<hr><p style="font-size:16px; text-align:left;">KOLKATA: West Bengal's Covid-19 tally rose to 5,71,371 on Sunday as 193 more people tested positive for the infection, while five fresh 
 fatalities pushed the state's coronavirus death toll to 10,207, a health bulletin said. Kolkata reported the highest number of new cases at 48,
  followed by North 24 Parganas (46), it said.
 </p>
