--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ div.container {
   padding-bottom:auto;
   padding-left: 30px;
   TEXT-ALIGN:center;
-  border-style:groove;"> COVID Situation and Other Testimonials
+    border-style:groove;"> <h2 style="align:center;">COVID Situation and Other Testimonials</h2>
 <br>
 <hr><p style="font-size:16px; text-align:left;">KOLKATA: West Bengal's Covid-19 tally rose to 5,71,371 on Sunday as 193 more people tested positive for the infection, while five fresh 
 fatalities pushed the state's coronavirus death toll to 10,207, a health bulletin said. Kolkata reported the highest number of new cases at 48,
